[package]
name = "riscv-hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"]}
log = "0.4"
bitflags = "1.3"
buddy_system_allocator = "0.11"
bitmap-allocator = "0.1.0"
spin = "0.9"
riscv = "0.12.1"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
debug = true